@@ -68,6 +68,11 @@
 #define STRING_SHADOWS_NONE				"none"
 #define STRING_CAUSTICS					"caustics"
 #define STRING_VOLUMETRIC_FOG			"volumetric_fog"
+#define STRING_ANTIALIASING				"antialiasing"
+#define STRING_ANTIALIASING_NONE		"none"
+#define STRING_ANTIALIASING_LOW			"low"
+#define STRING_ANTIALIASING_MEDIUM		"medium"
+#define STRING_ANTIALIASING_HIGH		"high"
 #define STRING_APPLY					"apply"
 #define STRING_BACK						"back"
 #define STRING_SOUND					"sound"
