@@ -1,6 +1,7 @@
 Version 1.0.1
 =============
 
+- Added antialiasing support.
 - Fixed rope transparency.
 - Fixed incorrect polerope grabbing.
 - Fixed camera behaviour with pushable blocks.
